# snake

./: package.xml  setup.cfg  setup.py
.github/workflows/: main.yml
config/: empty.yaml  gazebo_params.yaml  joint.yaml  my_controllers.yaml
launch/: gazebo.launch.py  spwan.launch.py  try.launch.py
rviz/: snake.rviz
snake/: joint.py
urdf/: inertial_macros.xacro  materials.xacro  ros2_control.xacro  snake_robot_core.xacro
